--- a/src/main/resources/templates/plan/list.html
+++ b/src/main/resources/templates/plan/list.html
@@ -17,8 +17,8 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Plan</th>
-                <th scope="col">Importance</th>
-                <th scope="col">Register</th>
+                <th scope="col">Location</th>
+                <th scope="col">Schedule</th>
             </tr>
             </thead>
             <tbody>
@@ -29,10 +29,10 @@
                         </a>
                     </th>
                     <td>
-                        [[${dto.title}]]<font size="x-small" color="#a9a9a9"> [<b th:text="${dto.reviewCnt}"></b>] </font>
+                        [[${dto.title}]]<font size="x-small" color="#a9a9a9"> [<b th:text="${dto.checkListCount}"></b>] </font>
                     </td>
-                    <td><b>[[${dto.avg}]]</b></td>
-                    <td>[[${#temporals.format(dto.regDate,'yyyy/MM/dd')}]]</td>
+                    <td><b>[[${dto.location}]]</b></td>
+                    <td>[[${dto.start}]]</td>
                 </tr>
             </tbody>
         </table>
