--- a/src/main/resources/templates/planner/main.html
+++ b/src/main/resources/templates/planner/main.html
@@ -63,11 +63,11 @@
                         </div>
                         <div class="form-group">
                             <label>StartDate</label>
-                            <input type="text" class="form-control" name="start">
+                            <input type="datetime-local" name="start">
                         </div>
                         <div class="form-group">
                             <label>EndDate</label>
-                            <input type="text" class="form-control" name="end">
+                            <input type="datetime-local" class="form-control" name="end">
                         </div>
                     </div>
                     <div class="modal-footer">
